<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/TaskForm">

    <EditText
        android:id="@+id/ETtaskTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/task_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/ETtaskDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/task_description"
        android:inputType="textMultiLine"
        android:minLines="3"
        app:layout_constraintTop_toBottomOf="@id/ETtaskTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <CheckBox
        android:id="@+id/CBtaskCompleted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mark_completed"
        app:layout_constraintTop_toBottomOf="@id/ETtaskDescription"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btnsaveTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/CBtaskCompleted"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
